--- a/index.html
+++ b/index.html
@@ -266,13 +266,46 @@
     </div>
 
     <div class="product-slider">
-        <div class="slides">
+       <div class="slides">
             <div class="slide">
                 <div class="product" onclick="window.open('https://example.com/product1', '_blank')">
                     <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
                     <h3>Product 1</h3>
                     <p>৳1,490</p>
                     <div class="price">৳950</div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="product" onclick="window.open('https://example.com/product2', '_blank')">
+                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
+                    <h3>Product 2</h3>
+                    <p>৳990</p>
+                    <div class="price">৳750</div>
+                </div>
+            </div>
+           <div class="slides">
+            <div class="slide">
+                <div class="product" onclick="window.open('https://example.com/product1', '_blank')">
+                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
+                    <h3>Product 1</h3>
+                    <p>৳1,490</p>
+                    <div class="price">৳950</div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="product" onclick="window.open('https://example.com/product2', '_blank')">
+                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
+                    <h3>Product 2</h3>
+                    <p>৳990</p>
+                    <div class="price">৳750</div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="product" onclick="window.open('https://example.com/product2', '_blank')">
+                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
+                    <h3>Product 2</h3>
+                    <p>৳990</p>
+                    <div class="price">৳750</div>
                 </div>
             </div>
             <div class="slide">
@@ -297,6 +330,18 @@
             <div class="category-item">
                 <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Pants">
                 <h3>Pant</h3>
+            </div>
+            <div class="category-item">
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
+                <h3>Panjabi</h3>
+            </div>
+            <div class="category-item">
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
+                <h3>Panjabi</h3>
+            </div>
+            <div class="category-item">
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
+                <h3>Panjabi</h3>
             </div>
             <div class="category-item">
                 <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
