--- a/index.html
+++ b/index.html
@@ -347,6 +347,19 @@
                 <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
                 <h3>Panjabi</h3>
             </div>
+            <div class="category-item">
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
+                <h3>Panjabi</h3>
+            </div>
+            <div class="category-item">
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
+                <h3>Panjabi</h3>
+            </div>
+
+
+
+
+            
             <!-- More categories can be added here -->
         </div>
     </div>
