--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="menu-icon" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </div>
-        <div class="logo">Talha's SHOPPING</div>
+        <div class="logo">TALHA'S ONLINE SHOPPING</div>
         <div class="icons">
             <i class="fas fa-search"></i>
             <i class="fas fa-shopping-cart"></i>
