--- a/index.html
+++ b/index.html
@@ -282,40 +282,7 @@
                     <p>৳990</p>
                     <div class="price">৳750</div>
                 </div>
-            </div>
-           <div class="slides">
-            <div class="slide">
-                <div class="product" onclick="window.open('https://example.com/product1', '_blank')">
-                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
-                    <h3>Product 1</h3>
-                    <p>৳1,490</p>
-                    <div class="price">৳950</div>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="product" onclick="window.open('https://example.com/product2', '_blank')">
-                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
-                    <h3>Product 2</h3>
-                    <p>৳990</p>
-                    <div class="price">৳750</div>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="product" onclick="window.open('https://example.com/product2', '_blank')">
-                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
-                    <h3>Product 2</h3>
-                    <p>৳990</p>
-                    <div class="price">৳750</div>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="product" onclick="window.open('https://example.com/product2', '_blank')">
-                    <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
-                    <h3>Product 2</h3>
-                    <p>৳990</p>
-                    <div class="price">৳750</div>
-                </div>
-            </div>
+            
             <!-- Add more slides as needed, up to 10 products -->
         </div>
     </div>
@@ -348,12 +315,12 @@
                 <h3>Panjabi</h3>
             </div>
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
-                <h3>Panjabi</h3>
+                <img 
+                <h3>
             </div>
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
-                <h3>Panjabi</h3>
+                <img 
+                <h3
             </div>
 
 
