--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="menu-icon" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </div>
-        <div class="logo">TALHA'S ONLINE SHOPPING</div>
+        <div class="logo">LiVE SHOPPING</div>
         <div class="icons">
             <i class="fas fa-search"></i>
             <i class="fas fa-shopping-cart"></i>
@@ -266,7 +266,7 @@
     </div>
 
     <div class="product-slider">
-       <div class="slides">
+        <div class="slides">
             <div class="slide">
                 <div class="product" onclick="window.open('https://example.com/product1', '_blank')">
                     <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Product Image">
@@ -282,7 +282,7 @@
                     <p>৳990</p>
                     <div class="price">৳750</div>
                 </div>
-            
+            </div>
             <!-- Add more slides as needed, up to 10 products -->
         </div>
     </div>
@@ -302,31 +302,6 @@
                 <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
                 <h3>Panjabi</h3>
             </div>
-            <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
-                <h3>Panjabi</h3>
-            </div>
-            <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
-                <h3>Panjabi</h3>
-            </div>
-            <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
-                <h3>Panjabi</h3>
-            </div>
-            <div class="category-item">
-                <img 
-                <h3>
-            </div>
-            <div class="category-item">
-                <img 
-                <h3
-            </div>
-
-
-
-
-            
             <!-- More categories can be added here -->
         </div>
     </div>
