--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="menu-icon" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </div>
-        <div class="logo">LiVE SHOPPING</div>
+        <div class="logo">TALHA'S SHOPPING MART</div>
         <div class="icons">
             <i class="fas fa-search"></i>
             <i class="fas fa-shopping-cart"></i>
@@ -301,6 +301,14 @@
             <div class="category-item">
                 <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
                 <h3>Panjabi</h3>
+            </div>
+            <div class="category-item">
+                <img src="" alt="">
+                <h3></h3>
+            </div>
+            <div class="category-item">
+                <img src="" alt="">
+                <h3></h3>
             </div>
             <!-- More categories can be added here -->
         </div>
