--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
                 <h3>Panjabi</h3>
             </div>
             <div class="category-item">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Panjabi">
+                <h3>Panjabi</h3>
             </div>
             <div class="category-item">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Pant">
+                <h3>Pant</h3>
             </div>
             <!-- More categories can be added here -->
         </div>
