--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            height: 200vh;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -237,7 +238,7 @@
         <div class="menu-icon" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </div>
-        <div class="logo">TALHA'S SHOPPING MART</div>
+        <div class="logo">TALHA'S MART</div>
         <div class="icons">
             <i class="fas fa-search"></i>
             <i class="fas fa-shopping-cart"></i>
@@ -307,8 +308,8 @@
                 <h3>Panjabi</h3>
             </div>
             <div class="category-item">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume">
+                <h3>Perfume</h3>
             </div>
             <!-- More categories can be added here -->
         </div>
