--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             } else if (section === 'popular') {
                 window.location.href = 'popular.html'; // Change to your popular page URL
             } else if (section === 'help') {
-                window.location.href = 'help.html'; // Change to your help page URL
+                window.location.href = 'https://wa.me/1234567890'; // Change to your help page URL
             }
             toggleMenu();
         }
