--- a/index.html
+++ b/index.html
@@ -292,24 +292,24 @@
         <h2>Categories</h2>
         <div class="categories-items">
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Shirts">
-                <h3>Shirt</h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume1">
+                <h3>Perfume1</h3>
             </div>
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Pants">
-                <h3>Pant</h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume2">
+                <h3>Perfume2</h3>
             </div>
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Punjabi">
-                <h3>Panjabi</h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume3">
+                <h3>Perfume3</h3>
             </div>
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Panjabi">
-                <h3>Panjabi</h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume4">
+                <h3>Perfume4</h3>
             </div>
             <div class="category-item">
-                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume">
-                <h3>Perfume</h3>
+                <img src="https://s10.gifyu.com/images/S5WOf.jpg" alt="Perfume5">
+                <h3>Perfume5</h3>
             </div>
             <!-- More categories can be added here -->
         </div>
