--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,9 +19,11 @@
             height: 800px; /* Adjust based on the part you want to show */
             border: 0;
         }
+    </style>
+</head>
+<body>
     <div class="iframe-container">
-        <iframe src="https://bokulsports.com/livetv/watch/copa-america-live-6/182/" scrolling="no" allowfullscreen></iframe>
-        });
-    </script>
+        <iframe src="https://nowsportstv.com/" scrolling="no" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
