--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded iFrame</title>
+    <title>Iframe Example</title>
     <style>
         .iframe-container {
-            position: relative;
-            width: 100%;
-            height: 200px; /* Set the height you need */
-            overflow: hidden;
+            position: relative; /* Necessary for absolute positioning */
+            width: 100%; /* Adjust as needed */
+            height: 500px; /* Adjust as needed */
         }
         .iframe-container iframe {
-            position: absolute;
-            top: -220px; /* Adjust based on the part you want to show */
-            left: 0;
-            width: 100%;
-            height: 800px; /* Adjust based on the part you want to show */
-            border: 0;
+            position: absolute; /* Allows you to adjust top, left, right, bottom */
+            top: 10px; /* Adjust as needed */
+            left: 10px; /* Adjust as needed */
+            width: calc(100% - 20px); /* Full width minus the left and right padding */
+            height: calc(100% - 20px); /* Full height minus the top and bottom padding */
+            border: none; /* Remove border if you want */
         }
     </style>
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://nowsportstv.com/" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://nowsportstv.com/"></iframe>
     </div>
 </body>
 </html>
