--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             left: 10px; /* Adjust as needed */
             width: calc(100% - 20px); /* Full width minus the left and right padding */
             height: calc(100% - 20px); /* Full height minus the top and bottom padding */
-            border: none; /* Remove border if you want */
+            border: none; /* Remove border */
         }
     </style>
 </head>
 <body>
     <div class="iframe-container">
-        <iframe src="https://nowsportstv.com/"></iframe>
+        <iframe src="https://nowsportstv.com/" scrolling="yes"></iframe>
     </div>
 </body>
 </html>
