--- a/index.html
+++ b/index.html
@@ -3,26 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe Example</title>
+    <title>Talha's Player</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
     <style>
-        .iframe-container {
-            position: relative; /* Necessary for absolute positioning */
-            width: 100%; /* Adjust as needed */
-            height: 500px; /* Adjust as needed */
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        /* Custom styles based on the provided skin */
+        #player {
+            position: absolute;
+            width: 100% !important;
+            height: 100% !important;
+            background-color: #000;
         }
-        .iframe-container iframe {
-            position: absolute; /* Allows you to adjust top, left, right, bottom */
-            top: 10px; /* Adjust as needed */
-            left: 10px; /* Adjust as needed */
-            width: calc(100% - 20px); /* Full width minus the left and right padding */
-            height: calc(100% - 20px); /* Full height minus the top and bottom padding */
-            border: none; /* Remove border */
+        .jw-icon-rewind,
+        .jw-icon-forward {
+            filter: brightness(0) invert(1); /* Make icons white */
         }
+        .jw-text-live {
+            color: red;
+        }
+        /* Add spacing between buttons */
+        .jw-button-container {
+            display: flex;
+            justify-content: center; /* Center buttons horizontally */
+            gap: 10px; /* Adjust the gap between buttons */
+        }
+        /* Specific adjustments for individual buttons if needed */
+        .jw-icon-fullscreen,
+        .jw-icon-share,
+        .jw-icon-pip {
+            margin: 0 5px; /* Adjust margin as needed */
+        }
+        /* Add more custom styles as needed */
     </style>
 </head>
 <body>
-    <div class="iframe-container">
-        <iframe src="https://nowsportstv.com/" scrolling="yes"></iframe>
-    </div>
+    <div id="player"></div>
+
+    <script>
+        // JWPlayer API Key
+        jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
+
+        // Function to intercept network requests and modify URLs
+        function interceptNetworkRequests() {
+            const originalOpen = XMLHttpRequest.prototype.open;
+            XMLHttpRequest.prototype.open = function(method, url) {
+                if (url.startsWith('https://talhas.stream.000.pe/')) {
+                    url = url.replace('talhas.stream.000.pe/hls/live', 'talhas.stream.000.pe');
+                }
+                return originalOpen.apply(this, arguments);
+            };
+        }
+
+        // Function to determine the source type (HLS, DASH, MP4, MKV)
+        function determineSourceType(url) {
+            if (url.endsWith(".mkv") || url.endsWith(".mp4")) {
+                return "mp4";
+            } else if (url.endsWith(".m3u8")) {
+                return "hls";
+            } else if (url.endsWith(".mpd")) {
+                return "dash";
+            }
+            return "mp4"; // Default to MP4
+        }
+
+        // Function to setup JWPlayer with dynamic source detection
+        function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
+            const playlistItems = videoUrls.map((url, index) => {
+                return {
+                    title: "Talha's Stream - FanCode Live",
+                    description: "Watch Cricket And Football Live With Talha's Stream",
+                    image: "https://s11.gifyu.com/images/S1l3T.jpg",
+                    sources: [
+                        {
+                            file: url,
+                            type: determineSourceType(url),
+                            label: "1080p",
+                            default: true
+                        }
+                    ],
+                    drm: drmOptions ? {
+                        clearkey: {
+                            keyId: drmOptions.keyId,
+                            key: drmOptions.key
+                        }
+                    } : null
+                };
+            });
+
+            const playerInstance = jwplayer("player").setup({
+                controls: true,
+                sharing: true,
+                displaytitle: true,
+                autoplay: true,
+                displaydescription: true,
+                abouttext: "Video Player By Talha's Stream",
+                aboutlink: "https://t.me/talhasmovie_request_bot",
+
+                skin: {
+                    name: "netflix"
+                },
+
+                captions: {
+                    color: "#FFF",
+                    fontSize: 14,
+                    backgroundOpacity: 0,
+                    edgeStyle: "raised"
+                },
+
+                playlist: playlistItems,
+
+                advertising: {
+                    client: "vast",
+                    schedule: [
+                        {
+                            offset: "pre",
+                            tag: ""
+                        }
+                    ]
+                },
+                image: posterUrl // Add the poster image URL here
+            });
+
+            playerInstance.on("ready", function () {
+                const playerContainer = playerInstance.getContainer();
+                const buttonContainer = playerContainer.querySelector(".jw-button-container");
+                const spacer = buttonContainer.querySelector(".jw-spacer");
+                const timeSlider = playerContainer.querySelector(".jw-slider-time");
+                buttonContainer.replaceChild(timeSlider, spacer);
+
+                const rewindContainer = playerContainer.querySelector(".jw-display-icon-rewind");
+                const forwardContainer = rewindContainer.cloneNode(true);
+                const forwardDisplayButton = forwardContainer.querySelector(".jw-icon-rewind");
+                forwardDisplayButton.style.transform = "scaleX(-1)";
+                forwardDisplayButton.ariaLabel = "Forward 10 Seconds";
+                const nextContainer = playerContainer.querySelector(".jw-display-icon-next");
+                nextContainer.parentNode.insertBefore(forwardContainer, nextContainer);
+
+                playerContainer.querySelector(".jw-display-icon-next").style.display = "none";
+                const rewindControlBarButton = buttonContainer.querySelector(".jw-icon-rewind");
+                const forwardControlBarButton = rewindControlBarButton.cloneNode(true);
+                forwardControlBarButton.style.transform = "scaleX(-1)";
+                forwardControlBarButton.ariaLabel = "Forward 10 Seconds";
+                rewindControlBarButton.parentNode.insertBefore(forwardControlBarButton, rewindControlBarButton.nextElementSibling);
+
+                [forwardDisplayButton, forwardControlBarButton].forEach((button) => {
+                    button.onclick = () => {
+                        playerInstance.seek(playerInstance.getPosition() + 10);
+                    };
+                });
+            });
+        }
+
+        // Intercept network requests
+        interceptNetworkRequests();
+
+        // Replace the URLs below with your desired video URLs
+        setupPlayer(
+            [
+                "https://a39aivottlinear-a.akamaihd.net/OTTB/sin-nitro/live/clients/dash/enc/l8j2xgwt32/out/v1/fe72171ab2684ab8b9ee3e2ffcc9cff2/cenc.mpd"
+                
+            ],
+            {
+                keyId: "159a2b4e1d2d7f16892d35d935a2fb34", // Replace with your DRM keyId if needed
+                key: "07809840dd0f511221ca78459167d1b3"  // Replace with your DRM key if needed
+            },
+            "" // Replace this with your poster image URL
+        );
+    </script>
 </body>
 </html>
