--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
             const playlistItems = videoUrls.map((url, index) => {
                 return {
-                    title: "Watch Cricket & Football Live With Talha's Stream",
-                    description: "Talha's Stream - FanCode Live",
+                    title: "Talha's Stream - FanCode Live",
+                    description: "Watch Cricket & Football Live With Talha's Stream",
                     image: "https://s11.gifyu.com/images/S1l3T.jpg",
                     sources: [
                         {
