--- a/index.html
+++ b/index.html
@@ -43,110 +43,122 @@
     <div id="player"></div>
 
     <script>
-        jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
+        // Function to validate embedding
+        function isValidEmbed() {
+            const referrer = document.referrer;
+            // Add allowed domains here
+            const allowedDomains = ["https://t.talhasstream-cricket.000.pe/", "https://t.talhasstream-cricket.000.pe/"];
+            return allowedDomains.some(domain => referrer.includes(domain));
+        }
 
-        function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
-            const playlistItems = videoUrls.map((url, index) => {
-                return {
-                    title: "Talha's Stream - FanCode Live",
-                    description: "Watch Cricket & Football Live With Talha's Stream",
-                    image: "https://s11.gifyu.com/images/S1l3T.jpg",
-                    sources: [
-                        {
-                            file: url,
-                            type: determineSourceType(url),
-                            label: "1080p",
-                            default: true
-                        }
-                    ],
-                    drm: drmOptions ? {
-                        clearkey: {
-                            keyId: drmOptions.keyId,
-                            key: drmOptions.key
-                        }
-                    } : null
-                };
-            });
+        if (!isValidEmbed()) {
+            document.body.innerHTML = '<h1>Unauthorized Embed</h1><p>Sorry, this content cannot be embedded on unauthorized sites.</p>';
+        } else {
+            jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
 
-            jwplayer("player").setup({
-                controls: true,
-                sharing: true,
-                displaytitle: true,
-                autoplay: true,
-                displaydescription: true,
-                abouttext: "Video Player By Talha's Stream",
-                aboutlink: "https://t.me/talhasmovie_request_bot",
-                skin: {
-                    name: "netflix"
-                },
-                captions: {
-                    color: "#FFF",
-                    fontSize: 14,
-                    backgroundOpacity: 0,
-                    edgeStyle: "raised"
-                },
-                playlist: playlistItems,
-                advertising: {
-                    client: "vast",
-                    schedule: [
-                        {
-                            offset: "pre",
-                            tag: ""
-                        }
-                    ]
-                },
-                image: posterUrl
-            }).on("ready", function () {
-                const playerContainer = jwplayer().getContainer();
-                const buttonContainer = playerContainer.querySelector(".jw-button-container");
-                const spacer = buttonContainer.querySelector(".jw-spacer");
-                const timeSlider = playerContainer.querySelector(".jw-slider-time");
-                buttonContainer.replaceChild(timeSlider, spacer);
-
-                const rewindContainer = playerContainer.querySelector(".jw-display-icon-rewind");
-                const forwardContainer = rewindContainer.cloneNode(true);
-                const forwardDisplayButton = forwardContainer.querySelector(".jw-icon-rewind");
-                forwardDisplayButton.style.transform = "scaleX(-1)";
-                forwardDisplayButton.ariaLabel = "Forward 10 Seconds";
-                const nextContainer = playerContainer.querySelector(".jw-display-icon-next");
-                nextContainer.parentNode.insertBefore(forwardContainer, nextContainer);
-
-                playerContainer.querySelector(".jw-display-icon-next").style.display = "none";
-                const rewindControlBarButton = buttonContainer.querySelector(".jw-icon-rewind");
-                const forwardControlBarButton = rewindControlBarButton.cloneNode(true);
-                forwardControlBarButton.style.transform = "scaleX(-1)";
-                forwardControlBarButton.ariaLabel = "Forward 10 Seconds";
-                rewindControlBarButton.parentNode.insertBefore(forwardControlBarButton, rewindControlBarButton.nextElementSibling);
-
-                [forwardDisplayButton, forwardControlBarButton].forEach((button) => {
-                    button.onclick = () => {
-                        jwplayer().seek(jwplayer().getPosition() + 10);
+            function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
+                const playlistItems = videoUrls.map((url, index) => {
+                    return {
+                        title: "Talha's Stream - FanCode Live",
+                        description: "Watch Cricket & Football Live With Talha's Stream",
+                        image: "https://s11.gifyu.com/images/S1l3T.jpg",
+                        sources: [
+                            {
+                                file: url,
+                                type: determineSourceType(url),
+                                label: "1080p",
+                                default: true
+                            }
+                        ],
+                        drm: drmOptions ? {
+                            clearkey: {
+                                keyId: drmOptions.keyId,
+                                key: drmOptions.key
+                            }
+                        } : null
                     };
                 });
-            });
-        }
 
-        function determineSourceType(url) {
-            if (url.endsWith(".mkv") || url.endsWith(".mp4")) {
-                return "mp4";
-            } else if (url.endsWith(".m3u8")) {
-                return "hls";
-            } else if (url.endsWith(".mpd")) {
-                return "dash";
+                jwplayer("player").setup({
+                    controls: true,
+                    sharing: true,
+                    displaytitle: true,
+                    autoplay: true,
+                    displaydescription: true,
+                    abouttext: "Video Player By Talha's Stream",
+                    aboutlink: "https://t.me/talhasmovie_request_bot",
+                    skin: {
+                        name: "netflix"
+                    },
+                    captions: {
+                        color: "#FFF",
+                        fontSize: 14,
+                        backgroundOpacity: 0,
+                        edgeStyle: "raised"
+                    },
+                    playlist: playlistItems,
+                    advertising: {
+                        client: "vast",
+                        schedule: [
+                            {
+                                offset: "pre",
+                                tag: ""
+                            }
+                        ]
+                    },
+                    image: posterUrl
+                }).on("ready", function () {
+                    const playerContainer = jwplayer().getContainer();
+                    const buttonContainer = playerContainer.querySelector(".jw-button-container");
+                    const spacer = buttonContainer.querySelector(".jw-spacer");
+                    const timeSlider = playerContainer.querySelector(".jw-slider-time");
+                    buttonContainer.replaceChild(timeSlider, spacer);
+
+                    const rewindContainer = playerContainer.querySelector(".jw-display-icon-rewind");
+                    const forwardContainer = rewindContainer.cloneNode(true);
+                    const forwardDisplayButton = forwardContainer.querySelector(".jw-icon-rewind");
+                    forwardDisplayButton.style.transform = "scaleX(-1)";
+                    forwardDisplayButton.ariaLabel = "Forward 10 Seconds";
+                    const nextContainer = playerContainer.querySelector(".jw-display-icon-next");
+                    nextContainer.parentNode.insertBefore(forwardContainer, nextContainer);
+
+                    playerContainer.querySelector(".jw-display-icon-next").style.display = "none";
+                    const rewindControlBarButton = buttonContainer.querySelector(".jw-icon-rewind");
+                    const forwardControlBarButton = rewindControlBarButton.cloneNode(true);
+                    forwardControlBarButton.style.transform = "scaleX(-1)";
+                    forwardControlBarButton.ariaLabel = "Forward 10 Seconds";
+                    rewindControlBarButton.parentNode.insertBefore(forwardControlBarButton, rewindControlBarButton.nextElementSibling);
+
+                    [forwardDisplayButton, forwardControlBarButton].forEach((button) => {
+                        button.onclick = () => {
+                            jwplayer().seek(jwplayer().getPosition() + 10);
+                        };
+                    });
+                });
             }
-            return "mp4"; // Default to MP4
-        }
 
-        setupPlayer(
-            [
-                "https://a39aivottlinear-a.akamaihd.net/OTTB/sin-nitro/live/clients/dash/enc/l8j2xgwt32/out/v1/fe72171ab2684ab8b9ee3e2ffcc9cff2/cenc.mpd"
-            ],
-            {
-                keyId: "159a2b4e1d2d7f16892d35d935a2fb34",
-                key: "07809840dd0f511221ca78459167d1b3"
-            },
-            ""
-        );
+            function determineSourceType(url) {
+                if (url.endsWith(".mkv") || url.endsWith(".mp4")) {
+                    return "mp4";
+                } else if (url.endsWith(".m3u8")) {
+                    return "hls";
+                } else if (url.endsWith(".mpd")) {
+                    return "dash";
+                }
+                return "mp4"; // Default to MP4
+            }
+
+            setupPlayer(
+                [
+                    "https://a39aivottlinear-a.akamaihd.net/OTTB/sin-nitro/live/clients/dash/enc/l8j2xgwt32/out/v1/fe72171ab2684ab8b9ee3e2ffcc9cff2/cenc.mpd"
+                ],
+                {
+                    keyId: "159a2b4e1d2d7f16892d35d935a2fb34",
+                    key: "07809840dd0f511221ca78459167d1b3"
+                },
+                ""
+            );
+        }
     </script>
 </body>
 </html>
