--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
 
         if (!isValidEmbed()) {
-            document.body.innerHTML = '<h1>Unauthorized Embed</h1><p>Sorry, this content cannot be embedded on unauthorized sites.</p>';
+            document.body.innerHTML = '<h1>চুরি করা মহাপাপ(By Order Of Talha, The Creator Of This Page)</h1><p></p>';
         } else {
             jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
 
