--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talha's Player</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
+    <script src="https://en.gdplayertv.to/assets/js/jwplayer.latest.js"></script>
     <style>
         body, html {
             margin: 0;
@@ -54,7 +54,7 @@
         if (!isValidEmbed()) {
             document.body.innerHTML = '<h1>চুরি করা মহাপাপ(By Order Of Talha, The Creator Of This Page)</h1><p></p>';
         } else {
-            jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
+            jwplayer.key = 'KQX8GB3qLxMcaljsZbVTdxbNT4D1gHQYtp7Yk39+giigapDWh1CH6D1OQ8g=';
 
             function setupPlayer(videoUrls, drmOptions = null, posterUrl = null) {
                 const playlistItems = videoUrls.map((url, index) => {
@@ -150,11 +150,11 @@
 
             setupPlayer(
                 [
-                    "https://a39aivottlinear-a.akamaihd.net/OTTB/sin-nitro/live/clients/dash/enc/l8j2xgwt32/out/v1/fe72171ab2684ab8b9ee3e2ffcc9cff2/cenc.mpd"
+                    "https://en.gdplayertv.to/hls/?tv=astro-cricket&alt=0&bypass=0&token=Q1FQU1l0NWdVRjlBSTRDRjdtM0JxQT09OjoFNZNmQCcJqh%2FrFrE2Ya9Z"
                 ],
                 {
-                    keyId: "159a2b4e1d2d7f16892d35d935a2fb34",
-                    key: "07809840dd0f511221ca78459167d1b3"
+                    keyId: "4C301691661224EC7185C10C368BEC40",
+                    key: "4C301726558909DC139DFF30B2A792F3"
                 },
                 ""
             );
