--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://s11.gifyu.com/images/S1l3T.jpg" type="image/png" sizes="32x32">
+    
     <title>Talha's Player</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://content.jwplatform.com/libraries/KB5zFt7A.js"></script>
