--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         function isValidEmbed() {
             const referrer = document.referrer;
             // Add allowed domains here
-            const allowedDomains = ["https://talhas.crickett.rf.gd/", "https://t.talhasstream-football-1.000.pe/"];
+            const allowedDomains = ["https://talhas.crickett.rf.gd/", "https://talhas.footballl.rf.gd/"];
             return allowedDomains.some(domain => referrer.includes(domain));
         }
 
